# stratechna-timer

./: .gitignore  README.md  generate_icons.py  setup_repo.py
.github/workflows/: build.yml
src/: app.js  index.html
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
