[package]
name = "stratechna-timer"
version = "1.0.0"
description = "Stratechna Cronómetros — App de sistema"
authors = ["Stratechna"]
edition = "2021"

[lib]
name = "stratechna_timer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "stratechna-timer"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-store = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
